@@ -17,3 +17,5 @@ Changes since release 0.3.9:
 
 - Multi-asset option now takes a generic stochastic process
 
+- Convergence statistics added (thanks to Gary Kennedy.)
+
